# rise_radar_collector-

./: .gitignore  AGENTS.md  PCD_WORKFLOW.md  SECURITY.md  SENSR_MULTIPROCESSING_FIX_PLAN.md  apiDOC.md  pcdplayer.py  plan.txt  rostopcd.py
.claude/: settings.local.json
radar_data/bag_player/: QUICKSTART.md  README.md  install.sh  requirements.txt  rosbag_player.py  run.sh
radar_v2/: CHANGELOG_v2.1.0.md  DEAD_CONNECTION_FIX.md  MEMORY_MANAGEMENT.md  run_multiprocessing_wsl.bat  run_multiprocessing_wsl.sh  run_simple_wsl.bat  run_simple_wsl.sh  sensr_manager.py  setup_pointcloud.bat  setup_pointcloud_ubuntu.sh  simple_pointcloud_recorder.py  test.bat  test_connection.py
radar_v2/config/: config.yaml.example
radar_v2/src/: data_processor.py  data_processor.py.backup_1762927718  data_processor_multiprocessing.py  data_processor_multiprocessing.py.backup_graceful  data_processor_optimized_patch.py  sensr_client.py  utils.py
radar_v2/test/: README.md  README_AUTO_RESTART.md  README_MULTIPROCESSING.md  auto_restart.sh  auto_run_multiprocessing.bat  main_monitor.py  main_monitor_profiler.py  main_multiprocessing.py  main_optimized.py  main_serialization_test.py  (+2 more)
radar_v3/: README.md  main_multiprocessing.py  run_multiprocessing_wsl.sh
ros_test/: Dockerfile  README.md  USAGE.md  build_and_run.sh  docker-compose.yml  quick_start.sh  run_rviz.sh  test_system.sh
ros_test/src/sensr_ros2_driver/: CMakeLists.txt  package.xml
ros_test/src/sensr_ros2_driver/config/: sensr.rviz  sensr_params.yaml  sensr_params.yaml.example
ros_test/src/sensr_ros2_driver/launch/: sensr_driver.launch.py  sensr_system.launch.py
ros_test/src/sensr_ros2_driver/scripts/: sensr_bag_recorder.py  sensr_driver_node.py
ros_test/src/sensr_ros2_driver/sensr_ros2_driver/: __init__.py
sensr_lidar_recorder/: README.md  enable_pointcloud.py  how_to_use.md  main.py  quick_start.bat  requirements.txt  requirements_ubuntu.txt  run.bat  run_long_term.bat  run_simple.bat  run_simple_ubuntu.sh  run_test.bat  run_ubuntu.sh  run_ubuntu.sh.backup  run_wsl.bat  sensr_manager.py  setup.bat  setup.sh  setup_ubuntu.sh  simple_pointcloud_recorder.py
(+21 files in other folders)
